add dispensing CR logic
